Fix hero text and img alignment

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 .header {
     background-color: #1F2937;
-    padding: 32px 196px;
+    padding: 32px 256px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -31,7 +31,10 @@ body {
 
 .hero {
     background-color: #1F2937;
-    padding: 64px 196px;
+    padding: 64px 256px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .hero-content {
     display: flex;
